src/syntax_analysis/expressions/function_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__function_expression__tests__test_syntax_analysis_for_function_expression_case2.snap
---
source: src/syntax_analysis/expressions/function_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "FUNCTION": {
            "parameters": [],
            "block": {
              "nodes": []
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
